# pascal

./: CMakeLists.txt
include/: generator.h  parser.h  token_types.h  tokenizer.h
src/: generator.c  main.c  parser.c  tokenizer.c
